corrected font-size for date and adding line-spacing

--- a/src/styles/news.css
+++ b/src/styles/news.css
@@ -1,15 +1,3 @@
-
-#Top-title{
-    display: flex;
-    justify-content: center;
-    color: white;
-    margin: 0;
-    margin-bottom: 10px;
-    font-family: 'Google Sans', sans-serif;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
-  
   .box-container {
     display: flex;
     justify-content: center;
@@ -32,7 +20,11 @@
     font-family: 'Google Sans', sans-serif;
   }
   
-  
+  .month-year{
+    font-size: 15px;
+    line-height: 1.5;
+  }
+
   #news {
     display: flex;
     flex-direction: column;
